--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="/latihan_5B/kel2.css">
+<link rel="stylesheet" href="kel2.css">
 <link rel="shortcut icon" href="/latihan_5B/images/blue_night_moon_over_lake.jpg" type="image/x-icon">
 <head>
     <meta charset="UTF-8">
