--- a/index.html
+++ b/index.html
@@ -27,112 +27,6 @@
         </main>
     </section>
 
-    <section class="materi">
-      <div class="tabel1">
-        <table>
-          <h2>Daftar</h2>
-          <!-- tr table row sebaris -->
-            <tr>
-              <!-- th itu table head untuk header -->
-              <th>Bus </th> 
-              <th>Kursi </th>   
-              <th>Harga</th>
-            </tr>
-            <tr>
-              <!-- table data isi table -->
-              <td>Bus Ono</td>
-              <td>56 Kursi</td>
-              <td>Rp 15.000.000</td>
-            </tr>
-            <tr>
-              <td>Bus Yoa</td>
-              <td>34 Kursi</td>
-              <td>Rp 10.000.000</td>
-            </tr>
-        </table>
-      </div>
-      <div class="tabel2">
-        <table>
-          <thead>
-            <tr>
-              <th scope="col" rowspan="2">NO.</th>
-              <th scope="col" rowspan="2">Nama Kegiatan</th>
-              <th scope="col" colspan="4">Oktober</th>
-              <th scope="col" colspan="4">November</th>
-            </tr>
-            <tr>
-              <th scope="col">9</th>
-              <th scope="col">18</th>
-              <th scope="col">18</th>
-              <th scope="col">18</th>
-              <th scope="col">18</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>2</td>
-              <td>Dasar</td>
-            </tr>
-            <tr>
-              <td>3</td>
-              <td>wss</td>
-            </tr>
-            <tr>
-              <th></th>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-          
-      
-      <div class="list">
-        <h2>Daftar Tujuan Destinasi</h2>
-
-        <!-- list style bisa ganti ikon -->
-        <ul style="list-style-type: circle;">
-          <li>Semarang</li>
-          <li>Jogjakarta</li>
-          <li>Bandung</li>
-        </ul>
-
-        <!-- type bisa ganti angka atau huruf -->
-        <ol type="I"> 
-          <li>Surabaya</li>
-          <li>Surakarta</li>
-          <li>Sukabumi</li>
-        </ol>
-
-        <dl>
-          <dt>Jogjakarta</dt>
-          <dd>- Keraton Kesultanan</dd>
-          <dd>- Candi Prambanan</dd>
-        </dl>
-
-      </div>
-    </section>
-
-
-    <section class="perjalanan" id="perjalanan">
-        <h2>Perjalanan<span> Kami</span></h2>
-        <div class="box">
-          <div class="img">
-            <img src="/latihan_5B/images/blue_night_moon_over_lake.jpg" alt="">
-            <h2>Semarang</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat aliquid laborum illum, voluptas ipsum tempora, totam soluta adipisci ea aperiam alias cupiditate necessitatibus obcaecati qui? Ut soluta odit beatae nam.</p>
-          </div>
-          <div class="img">
-            <img src="/latihan_5B/images/blue_night_moon_over_lake.jpg" alt="">
-            <h2>Jogjakarta</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat aliquid laborum illum, voluptas ipsum tempora, totam soluta adipisci ea aperiam alias cupiditate necessitatibus obcaecati qui? Ut soluta odit beatae nam.</p>
-          </div>
-          <div class="img">
-            <img src="/latihan_5B/images/blue_night_moon_over_lake.jpg" alt="">
-            <h2>Bandung</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat aliquid laborum illum, voluptas ipsum tempora, totam soluta adipisci ea aperiam alias cupiditate necessitatibus obcaecati qui? Ut soluta odit beatae nam.</p>
-          </div>
-        </div>
-    </section>
-
 
     <section class="form">
       <h2> Pendaftaran</h2>
@@ -164,11 +58,18 @@
 
     </section>
 
+    <footer>
+      <div class="links">
+        <a href="">Home</a>
+        <a href="">Pemesanan</a>
+        <a href="">Kendaraan</a>
+        <a href="">Layanan</a>
+      </div>
+
+      <div class="credit">
+        <p>Created by <a href=""> Kelompok 2</a>. | &copy; 2024.</p>
+      </div>
+    </footer>
 </body>
-
-<footer>
-  
-</footer>
-
 
 </html>
