--- a/index.html
+++ b/index.html
@@ -27,6 +27,24 @@
         </main>
     </section>
 
+    <section class="galeri">
+      <h2>Galeri</h2>
+      <div class="isigaleri">
+        <div class="images">
+          <img src="images/blackwhole.png" alt="">
+        </div>
+        <div class="images">
+          <img src="images/blackwhole.png" alt="">
+        </div>
+        <div class="images">
+          <img src="images/blackwhole.png" alt="">
+        </div>
+        <div class="images">
+          <img src="images/blackwhole.png" alt="">
+        </div>
+      </div>
+    </section>
+
 
     <section class="form">
       <h2> Pendaftaran</h2>
