--- a/index.html
+++ b/index.html
@@ -32,19 +32,60 @@
       <div class="isigaleri">
         <div class="images">
           <img src="images/blackwhole.png" alt="">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus nemo incidunt cum delectus molestiae repellat? Alias temporibus, natus amet rem odit tempora eum at earum eius, minus exercitationem laudantium voluptas.</p>
         </div>
         <div class="images">
           <img src="images/blackwhole.png" alt="">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel aliquam quos cum ducimus, tempore minima dolore adipisci temporibus, recusandae, veritatis facilis alias quod inventore. Officiis voluptatum soluta eveniet eligendi dolores.</p>
         </div>
         <div class="images">
           <img src="images/blackwhole.png" alt="">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam sint ullam harum possimus nihil dignissimos, laborum cum pariatur facilis cumque animi necessitatibus nulla velit error consectetur, officiis deleniti iusto! Amet.</p>
         </div>
         <div class="images">
           <img src="images/blackwhole.png" alt="">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, incidunt tempore voluptate dolorem tenetur ipsa dolores assumenda et aliquid libero! Cum sapiente ad asperiores exercitationem omnis. Numquam dolor temporibus laudantium.</p>
+        </div>
+        <div class="images">
+          <img src="images/blackwhole.png" alt="">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, incidunt tempore voluptate dolorem tenetur ipsa dolores assumenda et aliquid libero! Cum sapiente ad asperiores exercitationem omnis. Numquam dolor temporibus laudantium.</p>
+        </div>
+        <div class="images">
+          <img src="images/blackwhole.png" alt="">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, incidunt tempore voluptate dolorem tenetur ipsa dolores assumenda et aliquid libero! Cum sapiente ad asperiores exercitationem omnis. Numquam dolor temporibus laudantium.</p>
+        </div>
+        <div class="images">
+          <img src="images/blackwhole.png" alt="">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, incidunt tempore voluptate dolorem tenetur ipsa dolores assumenda et aliquid libero! Cum sapiente ad asperiores exercitationem omnis. Numquam dolor temporibus laudantium.</p>
+        </div>
+        <div class="images">
+          <img src="images/blackwhole.png" alt="">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, incidunt tempore voluptate dolorem tenetur ipsa dolores assumenda et aliquid libero! Cum sapiente ad asperiores exercitationem omnis. Numquam dolor temporibus laudantium.</p>
+        </div>
+
+        <div class="video">
+          <video src=""></video>
+        </div>
+
+        
+      </div>
+      <div class="isiytb">
+        
+        <div class="ytb">
+          <iframe src="https://www.youtube.com/embed/2XosKncBoQ4?si=FW7puCFlvEc-SCdD" frameborder="1"></iframe>
+        </div>
+        <div class="ytb">
+          <iframe src="https://www.youtube.com/embed/d3s6qye7GOE?si=tvnIh_wunxE64i0k" frameborder="1"></iframe>
+        </div>
+        <div class="ytb">
+          <iframe src="https://www.youtube.com/embed/d3s6qye7GOE?si=tvnIh_wunxE64i0k" frameborder="1"></iframe>
+        </div>
+        <div class="ytb">
+          <iframe src="https://www.tiktok.com/embed/v2/7391063199539318017" allowfullscreen width="
+          400" height="600" frameborder="1"></iframe>
         </div>
       </div>
     </section>
-
 
     <section class="form">
       <h2> Pendaftaran</h2>
