--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         
     <section class="isi">
       <div class="table">
+        <h2>Daftar Harga Sewa</h2>
         <table style="">
           <tr>
             <th>
@@ -215,7 +216,7 @@
         <p>Created by <a href=""> Kelompok 2</a>. | &copy; 2024.</p>
       </div>
     </footer>
-    
+
 </body>
 
 </html>
