--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
           </tr> 
         </table>
       </div>
+    </section>
+    
+    <section class="layanan">
       <div class="list">
         <h2>Layanan <span>Area</span></h2>
         <ul>
@@ -112,6 +115,7 @@
             <li>Kelapa Gading</li>
         </ul>
       </div>
+
     </section>
 
     
