--- a/index.html
+++ b/index.html
@@ -74,48 +74,48 @@
     <section class="layanan">
       <div class="list">
         <h2>Layanan <span>Area</span></h2>
-        <ul>
-          <h3>Jakarta</h3>
-          <li>Pulo Gebang</li>
-          <li>Cikini</li>
-          <li>Senayan</li>
-          <li>Slipi</li>
-          <li>Kelapa Gading</li>
-        </ul>
-        <ul>
+        <div class="list-item">
+          <ul>
+            <h3>Jakarta</h3>
+            <li>Pulo Gebang</li>
+            <li>Cikini</li>
+            <li>Senayan</li>
+            <li>Slipi</li>
+            <li>Kelapa Gading</li>
+          </ul>
+          <ul>
             <h3>Bogor</h3>
-            <li>Bojong Gede</li>
-            <li>Sukabumi</li>
             <li>Cigombong</li>
+            <li>Sukabumi</li>
             <li>Cibeureum</li>
             <li>Jasinga</li>
-        </ul>
-        <ul>
+            <li>Bojong Gede</li>
+          </ul>
+          <ul>
             <h3>Depok</h3>
             <li>Pulo Gebang</li>
             <li>Cikini</li>
             <li>Senayan</li>
             <li>Slipi</li>
             <li>Kelapa Gading</li>
-        </ul>
-        <ul>
+          </ul>
+          <ul>
             <h3>Tangerang</h3>
             <li>Pulo Gebang</li>
             <li>Cikini</li>
             <li>Senayan</li>
             <li>Slipi</li>
             <li>Kelapa Gading</li>
-        </ul>
-        <ul>
+          </ul>
+          <ul>
             <h3>Bekasi</h3>
             <li>Pulo Gebang</li>
             <li>Cikini</li>
             <li>Senayan</li>
             <li>Slipi</li>
             <li>Kelapa Gading</li>
-        </ul>
-      </div>
-
+          </ul>
+        </div>
     </section>
 
     
