--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Go-Rent</title>
+    <link rel="shortcut icon" href="/images/pavicon.png" type="image/x-icon">
 </head>
 <body>
 
@@ -123,36 +124,36 @@
       <h2>Galeri</h2>
       <div class="isigaleri">
         <div class="images">
-          <img src="images/blackwhole.png" alt="">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus nemo incidunt cum delectus molestiae repellat? Alias temporibus, natus amet rem odit tempora eum at earum eius, minus exercitationem laudantium voluptas.</p>
+          <img src="images/brio.jpeg" alt="">
+          <p>Honda Brio</p>
         </div>
         <div class="images">
-          <img src="images/blackwhole.png" alt="">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel aliquam quos cum ducimus, tempore minima dolore adipisci temporibus, recusandae, veritatis facilis alias quod inventore. Officiis voluptatum soluta eveniet eligendi dolores.</p>
+          <img src="images/ertiga.jpeg" alt="">
+          <p>New Ertiga</p>
         </div>
         <div class="images">
-          <img src="images/blackwhole.png" alt="">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam sint ullam harum possimus nihil dignissimos, laborum cum pariatur facilis cumque animi necessitatibus nulla velit error consectetur, officiis deleniti iusto! Amet.</p>
+          <img src="images/elfsh.jpeg" alt="">
+          <p>Elf Short</p>
         </div>
         <div class="images">
-          <img src="images/blackwhole.png" alt="">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, incidunt tempore voluptate dolorem tenetur ipsa dolores assumenda et aliquid libero! Cum sapiente ad asperiores exercitationem omnis. Numquam dolor temporibus laudantium.</p>
+          <img src="images/bused.jpeg" alt="">
+          <p>Bus Sedang</p>
         </div>
         <div class="images">
-          <img src="images/blackwhole.png" alt="">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, incidunt tempore voluptate dolorem tenetur ipsa dolores assumenda et aliquid libero! Cum sapiente ad asperiores exercitationem omnis. Numquam dolor temporibus laudantium.</p>
+          <img src="images/bus besar.jpeg" alt="">
+          <p>Bus Besar</p>
         </div>
         <div class="images">
-          <img src="images/blackwhole.png" alt="">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, incidunt tempore voluptate dolorem tenetur ipsa dolores assumenda et aliquid libero! Cum sapiente ad asperiores exercitationem omnis. Numquam dolor temporibus laudantium.</p>
+          <img src="images/vw.png" alt="">
+          <p>VW 1953/p>
         </div>
         <div class="images">
-          <img src="images/blackwhole.png" alt="">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, incidunt tempore voluptate dolorem tenetur ipsa dolores assumenda et aliquid libero! Cum sapiente ad asperiores exercitationem omnis. Numquam dolor temporibus laudantium.</p>
+          <img src="images/minicooper.png" alt="">
+          <p>Minicooper</p>
         </div>
         <div class="images">
-          <img src="images/blackwhole.png" alt="">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, incidunt tempore voluptate dolorem tenetur ipsa dolores assumenda et aliquid libero! Cum sapiente ad asperiores exercitationem omnis. Numquam dolor temporibus laudantium.</p>
+          <img src="images/jeeow.png" alt="">
+          <p>Jeep Wilss</p>
         </div>
 
         <div class="video">
