--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@
       </section>
       
       <section class="video-galeri">
-        <div class="video">
+        <div class="isivideo">
           <video src="images/Viddrive.mp4" controls></video>
         </div>
-        <div class="video">
+        <div class="isivideo">
           <video src="images/dirve.mp4" controls></video>
         </div>
         
