--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
     <section class="home">
         <main class="homi">
             <h1> Go-Rent</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis porro dolores facilis consequatur provident nam odio voluptates officiis amet facere, odit quaerat hic, explicabo dol
-            </p>
+            <p>Selamat Datang di Go-Rent</p>
           </main>
     </section>
         
