--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <link rel="stylesheet" href="kel2.css">
-<link rel="shortcut icon" href="/latihan_5B/images/blue_night_moon_over_lake.jpg" type="image/x-icon">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Go-Rent</title>
     <link rel="shortcut icon" href="/images/pavicon.png" type="image/x-icon">
+    <script>
+
+    </script></script>
+
+
+
 </head>
 <body>
 
@@ -23,7 +28,7 @@
     <section class="home">
         <main class="homi">
             <h1> Go-Rent</h1>
-            <p>Selamat Datang di Go-Rent</p>
+            <p>Selamat datang di Go-Rent, penyedia jasa sewa mobil terbaik dan terpercaya. Kami menawarkan berbagai pilihan kendaraan untuk kebutuhan perjalanan Anda, baik untuk keperluan pribadi, bisnis, maupun liburan. Dengan armada mobil yang terawat dan pelayanan profesional, kami siap mendukung kenyamanan dan keselamatan perjalanan Anda.</p>
           </main>
     </section>
         
@@ -101,19 +106,19 @@
           </ul>
           <ul>
             <h3>Tangerang</h3>
-            <li>Pulo Gebang</li>
-            <li>Cikini</li>
-            <li>Senayan</li>
-            <li>Slipi</li>
-            <li>Kelapa Gading</li>
+            <li>Cipondoh</li>
+            <li>Ciputat</li>
+            <li>Karang Tengah</li>
+            <li>Karawaci</li>
+            <li>Ciledug</li>
           </ul>
           <ul>
             <h3>Bekasi</h3>
-            <li>Pulo Gebang</li>
-            <li>Cikini</li>
-            <li>Senayan</li>
-            <li>Slipi</li>
-            <li>Kelapa Gading</li>
+            <li>Kranji</li>
+            <li>Mergahayu</li>
+            <li>Jati Makmur</li>
+            <li>Rawa Lumbu</li>
+            <li>Jaka Mulya</li>
           </ul>
         </div>
     </section>
@@ -182,9 +187,10 @@
           </div>
         </div>
     </section>
-      
+  
     <section class="form">
-      <h2> Pendaftaran</h2>
+      <h2> pendaftaran</h2>
+      <p></p>
       <div class="row">
         <form action="" method="post">
           <div class="input">
