--- a/index.html
+++ b/index.html
@@ -6,11 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Go-Rent</title>
     <link rel="shortcut icon" href="/images/pavicon.png" type="image/x-icon">
-    <script>
-
-    </script></script>
-
-
 
 </head>
 <body>
@@ -35,7 +30,7 @@
     <section class="isi">
       <div class="table">
         <h2>Daftar Harga Sewa</h2>
-        <table style="">
+        <table>
           <tr>
             <th>
                 Tipe Kendaraan
@@ -186,6 +181,22 @@
             400" height="600" frameborder="1"></iframe>
           </div>
         </div>
+
+        <div class="isiaudio">
+          <div class="audio">
+            <audio src="images/mixkit-cars-starting-1561.wav" controls></audio>
+          </div>
+          <div class="audio">
+            <audio src="images/mixkit-fast-car-drive-by-1538.wav" controls></audio>
+          </div>
+          <div class="audio">
+            <audio src="images/mixkit-passing-car-and-urban-ambience-1554.wav" controls></audio>
+          </div>
+          <div class="audio">
+            <audio src="images/mixkit-urban-city-sounds-and-light-car-traffic-369.wav" controls></audio>
+          </div>
+        </div>
+
     </section>
   
     <section class="form">
