--- a/index.html
+++ b/index.html
@@ -207,13 +207,13 @@
         
         <div class="isiytb">
           <div class="ytb">
-            <iframe src="https://www.youtube.com/embed/2XosKncBoQ4?si=FW7puCFlvEc-SCdD" frameborder="1"></iframe>
+            <iframe src="https://www.youtube.com/embed/ppYMwcn0mus?si=KASgJAdvo4oU9Y0V" frameborder="1"></iframe>
           </div>
           <div class="ytb">
-            <iframe src="https://www.youtube.com/embed/d3s6qye7GOE?si=tvnIh_wunxE64i0k" frameborder="1"></iframe>
+            <iframe src="https://www.youtube.com/embed/-fw9uK_Ua7E?si=LpdwOcMQ6q06D7IQ" frameborder="1"></iframe>
           </div>
           <div class="ytb">
-            <iframe src="https://www.youtube.com/embed/d3s6qye7GOE?si=tvnIh_wunxE64i0k" frameborder="1"></iframe>
+            <iframe src="https://www.youtube.com/embed/hh_dcPZcLQU?si=JIFPT-6DJErGCln6" frameborder="1"></iframe>
           </div>
         </div>
 
@@ -273,6 +273,7 @@
               <li>Email : GoRent@gmail.com</li>
               <li>Alamat : Tangerang, Ciputat</li>
             </ul>
+            <p>Kami siap melayani kebutuhan transportasi Anda dengan sepenuh hati. Terima kasih telah mempercayakan perjalanan Anda kepada Go-Rent</p>
         </div>
       </div>
     </section>
